--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
     <string name="joke_extra">joke_extra</string>
+    <string name="joke_loading_error">The joke could not be loaded</string>
 </resources>
